objects/Assigned_Interviewer__c/Assigned_Interviewer__c.object-meta.xml
<CustomObject>
    <label>Assigned Interviewer</label>
    <nameField>
        <displayFormat>ASINT {00000}</displayFormat>
        <label>Assigned Interviewer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Interviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>