objects/Assigned_Interviewer__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Assigned Interviewers</relationshipLabel>
    <relationshipName>Assigned_Interviewers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>