objects/Assigned_Interviewer__c/fields/Recommendatoin__c.field-meta.xml
<CustomField>
    <fullName>Recommendatoin__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Feedback</fullName>
                <default>true</default>
                <label>Pending Feedback</label>
            </value>
            <value>
                <fullName>Highly Recommend</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Do Not Recommend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>